--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,14 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
+    <repositories>
+        <!-- Pull GitHub releases as a dependency -->
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <artifactId>aether-yaml</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
