--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.AetherialMist</groupId>
         <artifactId>aether-parent-pom</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>main-SNAPSHOT</version>
     </parent>
 
     <repositories>
